// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snashot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        style={
          Object {
            "width": "20%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline button-active"
          onClick={[Function]}
          type="button"
        >
          Archive
        </button>
      </span>
    </div>
    <ul />
  </div>
  <div
    className="interactions"
  >
    <div
      className="loading-wrap"
    >
      <img
        alt="loading"
        src="logo.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Button has a valid shapshot 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
  More
</button>
`;

exports[`Loading has a calid snapshot 1`] = `
<div
  className="loading-wrap"
>
  is loading
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value="ipt val"
  />
  <button
    type="submit"
  >
    search...
  </button>
</form>
`;

exports[`Search has a valid text snapshot 1`] = `"Lorem ipsum dolor sit amet quisquam."`;

exports[`Table has a calid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
        Archive
      </button>
    </span>
  </div>
  <ul>
    <li
      className="table-row"
    >
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      />
      <span
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <a
          href={undefined}
          target="blank"
        >
          1
        </a>
      </span>
      <span
        style={
          Object {
            "width": "20%",
          }
        }
      >
        1
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        1
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          [DEL]
        </button>
      </span>
    </li>
    <li
      className="table-row"
    >
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      />
      <span
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <a
          href={undefined}
          target="blank"
        >
          2
        </a>
      </span>
      <span
        style={
          Object {
            "width": "20%",
          }
        }
      >
        2
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        2
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          [DEL]
        </button>
      </span>
    </li>
  </ul>
</div>
`;
